--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.4",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "framer-motion": "^12.0.2",
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
