--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.4",
     "yup": "^1.6.1",
-    "framer-motion": "^12.0.2",
+    "framer-motion": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
